--- a/3-generic/_generic.fonts.scss
+++ b/3-generic/_generic.fonts.scss
@@ -6,12 +6,9 @@
 /* ===== DEFINE & IMPORT FONTS ============================================== */
 
 // Victoria's
-@include font-face( $font-victoria, "#{$path-font-victoria}-Regular", $weight-normal, $file-formats: eot woff ttf );
-@include font-face( $font-victoria, "#{$path-font-victoria}-Semibold", $weight-semibold, $file-formats: eot woff ttf );
-@include font-face( $font-victoria, "#{$path-font-victoria}-Extrabold", $weight-extrabold, $file-formats: eot woff ttf );
-
-// Oxygen
-//@import url( "#{$path-font-oxygen}" );
+@include font-face( $font-victoria, "#{$path-font-victoria}-Regular", $weight-normal, $file-formats: ttf woff woff2 );
+@include font-face( $font-victoria, "#{$path-font-victoria}-Semibold", $weight-semibold, $file-formats: ttf woff woff2 );
+@include font-face( $font-victoria, "#{$path-font-victoria}-Extrabold", $weight-extrabold, $file-formats: ttf woff woff2 );
 
 // Font icons
-@include font-face( $font-victoria-icons, "#{$path-fonticon-victoria}", $file-formats: eot woff ttf svg );
+@include font-face( $font-victoria-icons, "#{$path-fonticon-victoria}", $file-formats: woff2 woff ttf );
