--- a/6-components/_components.layout.scss
+++ b/6-components/_components.layout.scss
@@ -3,6 +3,13 @@
 ==============================*/
 
 
+// Apps's dynamic container
+.app {
+    min-height: 100%; // IE11+ height issues fix; `min-height` instead of `height` to avoid Safari mobile bug where the content gets stuck and cannot be scrolled
+    flex: 1 1 auto; // Sticky footer
+}
+
+
 /* ===== RESPONSIVE VIEW WRAPPERS =========================================== */
 
 .view-large, .dialog {
