--- a/6-components/_components.navigation.scss
+++ b/6-components/_components.navigation.scss
@@ -80,8 +80,11 @@ $menu-tabbed-item-active-bg-colour: $green-victoria !default;
         }
     }
     &.schedule-tabs {
+        li:not(.active) + li:not(.active) {
+            border-left: 1px solid $grey-silver !important;
+        }
+
         & li > a {
-            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
             @include hoverify {
                 box-shadow: none;
             }
