--- a/6-components/_components.notification-overlay.scss
+++ b/6-components/_components.notification-overlay.scss
@@ -3,6 +3,7 @@
 ===============================*/
 
 .notification-overlay {
+    font-size: 18px; // FIXME: Remove to use 1rem or 100%
     overflow-y: auto;
     overflow-x: hidden;
     z-index: $z-index-max;
@@ -10,18 +11,33 @@
     background-color: rgba( $white, .98 );
     text-align: center;
 
-    h1 { margin: 0; }
+    h1,
+    h2 {
+        font-weight: $weight-semibold;
+        line-height: 1.25;
+        color: $green-victoria;
+    }
 
-    .logo.large { margin: 3em 0 1.5em; }
+    h1 { font-size: 1.8em; margin-bottom: .8em; }
+    h2 { font-size: 1.5em; }
+
+    .logo.large {
+        max-width: 25em;
+        margin: 3em 2.5% 0;
+    }
 
     @include media( $mobile-large-and-smaller ) {
-        .logo.large { margin: 2em 0 .7em; }
+        .logo.large {
+            max-width: 80%;
+            margin: 2em 0 .7em;
+        }
 
-        h1, h2 { line-height: 1.2; }
-
-        h1 { font-size: 1.7em; }
+        h1,
         h2 {
-            font-size: 1.4em;
+            line-height: 1.2;
+        }
+
+        h2 {
             margin-bottom: .2em;
         }
     }
