[FIX] Correct margin and padding when the highlight box is first in the nested content.

--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -521,6 +521,12 @@ $popup-border:   #fff;
 
         .content-simple { padding-top: $base-margin;}
     }
+
+    &.sector .block-container .block {
+        padding-top:   $base-margin;
+        margin-top:    0;
+        margin-bottom: $base-margin;
+    }
 }
 
 /** Simple warning wrapper. */
