--- a/5-objects/_objects.forms.scss
+++ b/5-objects/_objects.forms.scss
@@ -21,7 +21,7 @@
     .btn { margin-top: 0; margin-bottom: 0; }
 }
 
-//TODO: Move to widgets >>>
+//TODO: Move to widgets >>
 $toggle-height:          1.6em;
 $toggle-width:           3.9em;
 $toggle-handle-size:     1.6em;
