[ENH] Styles for generic forms (range selector, textarea, inputs, button, selector, custom selector, checkboxes and radios).

--- a/1-settings/_settings.colours.scss
+++ b/1-settings/_settings.colours.scss
@@ -66,6 +66,7 @@ $blue-accessibility:   #2E8ACA;
 $blue-grey-tower:      #A7BBC1;
 $yellow-spring-wood:   #F4F4E9; // Used for important highlights
 
+$red-roof-teraccota:   #AF1B1B;
 
 /** Not used anywhere yet - uncomment & move to start using any of those. */
 // $green-chrome-white:   #E7F0D4; // green highlight
